fixed teaser text alignment

--- a/src/operun/frontpage/browser/static/frontpage-compiled.css
+++ b/src/operun/frontpage/browser/static/frontpage-compiled.css
@@ -34,9 +34,9 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 }
 .teaser-text {
   position: absolute;
-  right: 30px;
-  bottom: 20px;
-  left: 30px;
+  right: 5%;
+  bottom: 33.333%;
+  left: 5%;
   color: #fff;
 }
 .teaser-image img {
@@ -49,7 +49,7 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 120px;
+  height: 33.333%;
   opacity: .5;
   background-color: #000000;
 }
@@ -65,6 +65,7 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 }
 .news-image img {
   width: 100%;
+  max-width: 380px;
   height: 100%;
 }
 .news-text-wrapper {
