--- a/src/operun/frontpage/browser/static/frontpage.less
+++ b/src/operun/frontpage/browser/static/frontpage.less
@@ -42,9 +42,9 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 
 .teaser-text {
   position: absolute;
-  right: 30px;
-  bottom: 20px;
-  left: 30px;
+  right: 5%;
+  bottom: 33.333%;
+  left: 5%;
   color: #fff;
 }
 
@@ -59,7 +59,7 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 120px;
+  height: 33.333%;
   opacity: .5;
   background-color: rgb(0, 0, 0);
 }
@@ -80,6 +80,7 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 
 .news-image img {
   width: 100%;
+  max-width: 380px;
   height: 100%;
 }
 
